--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,7 @@
         <delete file="${arxivTarFile}"/>
         <delete file="${arxivTarFile}.gz"/>
         <tar destfile="${arxivTarFile}" basedir="." includes="**"
-            excludes="*.synctex*,*.dvi,*.ps,webs.pdf,*.png,${arxivTarFile},${arxivTarFile}.gz,sandbox.*,Report*,bibliography/**,papers/**,talks/**,.hg/**,versions/**,TODO,referee/**,copyright/**,code/**,Icon*,.hg*,versions/**,.dropbox"
+            excludes="webs/,*.synctex*,*.dvi,*.ps,webs.pdf,*.png,${arxivTarFile},${arxivTarFile}.gz,sandbox.*,Report*,bibliography/**,papers/**,talks/**,.hg/**,versions/**,TODO,referee/**,copyright/**,code/**,Icon*,.hg*,versions/**,.dropbox,proofs/,publication/,*.toc,*.fdb_latexmk,*.bak,*.out,*.log"
         />
         <gzip src="${arxivTarFile}" destfile="${arxivTarFile}.gz"/>
         <delete file="${arxivTarFile}"/>
